# nordic-eink-demo

./: .gitignore  Cargo.toml  README.md  install.sh
.cargo/: config
data/: abema151x151.raw  rust144x144.raw
src/: main.rs
