[package]
name = "nordic-eink"
version = "0.1.0"
authors = ["Fredrik Simonsson <simson@thesimson.net>"]
edition = "2018"

[dependencies]
alloc-cortex-m = "0.3.5"
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
panic-halt = "0.2.0"
nb = "0.1.1"
epd-waveshare = { version = "0.2.0", default-features = false, features = ["epd1in54", "graphics"]}
embedded-graphics = "0.4.3"
[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2"
[dependencies.nrf52832-hal]
# version = "0.6.0"
# git = " https://github.com/simonsso/nrf52-hal/"
# branch = "spim_dev"
path = "/home/simson/rustlib/nrf52-hal/nrf52832-hal/"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[profile.dev]
opt-level = 0
# codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
